# docs/openapi.yaml
@@ -14,7 +14,7 @@ info:
   x-logo:
     url: https://layblar.github.io/docs/img/layblarlogo.svg
 servers:
-- url: "http://{tenant}/api/v1"
+- url: "http://{tenant}"
   variables:
     tenant:
       default: localhost:8080
@@ -33,7 +33,7 @@ tags:
 - name: Smart-Meter
   description: Operations about Smart-Meter data
 paths:
-  /api/v1/auth/login:
+  /auth/login:
     post:
       tags:
       - Authorization
@@ -59,13 +59,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  username:
+                  email:
                     type: string
                   password:
                     type: string
       security:
       - none: []
-  /api/v1/auth/register:
+  /auth/register:
     post:
       tags:
       - Authorization
@@ -84,16 +84,20 @@ paths:
           description: Invalid User
         "500":
           description: Server Error
-        "200":
+        "204":
           description: The registered user
           content:
             application/json:
               schema:
                 type: object
                 properties:
+                  userId:
+                    type: string
                   password:
                     type: string
                   email:
+                    type: string
+                  householdId:
                     type: string
       security:
       - none: []
@@ -856,7 +860,7 @@ components:
     LoginUserDTO:
       type: object
       properties:
-        username:
+        email:
           type: string
         password:
           type: string
