# gateway/src/main/java/at/fhv/layblar/authentication/model/LoginUserDTO.java
@@ -1,7 +1,0 @@
-package at.fhv.layblar.authentication.model;
-
-public class LoginUserDTO {
-
-    public String username;
-    public String password;
-}
